--- a/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
+++ b/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
@@ -115,9 +115,7 @@
 	box-shadow: inset 0 -1px 0 #eeeeee;	
 }
 .ui-state-hover a, .ui-state-hover a:hover { color: #c77405; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { 
-	padding-top: .35em !important;
-	padding-bottom: .25em !important;
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {  
 
 	color: #2d2d2d;
 
@@ -193,10 +191,7 @@
 }
 
 .ui-state-hover.black a, .ui-state-hover.black a:hover { color: #c77405; text-decoration: none; }
-.ui-state-active.black, .ui-widget-content.black .ui-state-active, .ui-widget-header.black .ui-state-active { 	
-	padding-top: .35em;
-	padding-bottom: .2em;
-	
+.ui-state-active.black, .ui-widget-content.black .ui-state-active, .ui-widget-header.black .ui-state-active { 		
 	color: #dcdcdc;
 	
 		
@@ -214,18 +209,16 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#494949',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #5f5f5f 0%,#444444 100%); /* W3C */
 	
-	-webkit-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b;
-	-moz-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b;
-	box-shadow: inset 0 1px 0 0  #545454, inset 0 -1px 0 0 #3b3b3b;
+	-webkit-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
+	-moz-box-shadow: inset 0 1px 0 0 #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
+	box-shadow: inset 0 1px 0 0  #545454, inset 0 -1px 0 0 #3b3b3b, inset 1px 0 0 0 #4f4f4f, inset -1px 0 0 0 #535353;
 }
 
 /* =============== */
 /* = Green state = */
 /* =============== */
 .ui-state-default.green, .ui-widget-content.green .ui-state-default, .ui-widget-header.green .ui-state-default
-{
-	font-size: 18px;
-	
+{	
 	color: #fff;
 	
 	border: 1px solid #b2eb82; 
@@ -270,9 +263,7 @@
 
 .ui-state-hover.green a, .ui-state-hover.green a:hover { color: #c77405; text-decoration: none; }
 .ui-state-active.green, .ui-widget-content.green .ui-state-active, .ui-widget-header.green .ui-state-active { 	
-	padding-top: .35em;
-	padding-bottom: .2em;
-	
+
 	color: #fff;
 	
 	border: 1px solid #74b851; 
