--- a/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
+++ b/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
@@ -116,7 +116,6 @@
 }
 .ui-state-hover a, .ui-state-hover a:hover { color: #c77405; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {  
-
 	color: #2d2d2d;
 
 	border: 1px solid #c1c0c0;
@@ -124,14 +123,13 @@
 	border-left-color: #bebdbd;
 	border-right-color: #bebdbd;
 
-/*	background: #f6f6f6 url(images/ui-bg_glass_100_f6f6f6_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #1c94c4; */
-	background: #ffffff; /* Old browsers */
+	background: #cdcdcd; /* Old browsers */
 	background: -moz-linear-gradient(top, #ffffff 0%, #cdcdcd 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(26%,#ffffff), color-stop(100%,#cdcdcd)); /* Chrome,Safari4+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#cdcdcd)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #ffffff 0%,#cdcdcd 100%); /* Chrome10+,Safari5.1+ */
 	background: -o-linear-gradient(top, #ffffff 0%,#cdcdcd 100%); /* Opera11.10+ */
 	background: -ms-linear-gradient(top, #ffffff 0%,#cdcdcd 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cdcdcd',GradientType=0 ); /* IE6-9 */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b6b6b', endColorstr='#cdcdcd',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #ffffff 0%,#cdcdcd 100%); /* W3C */
 
 	-webkit-box-shadow: inset 0 1px 0 0 #e4e3e3, inset 0 -1px 0 0 #cdcccc;
