Change missing add page

--- a/app/views/lost_list/index.html.erb
+++ b/app/views/lost_list/index.html.erb
@@ -1,7 +1,9 @@
 <style type="text/css" media="screen">
 	.b-header { margin-top: 8px; }
 </style>
-
+<hr class="b-hr" />
+<div class="container_16">
+	
 <div class="grid_12">
 	<div class="b-header">
 		Эти люди пропали в <a href="#">Москве</a>
@@ -40,4 +42,6 @@
 		</ul>
 		<%= button_to 'я знаю о таких местах', new_missing_path  %>
 	</div>
+</div>
+
 </div>
