--- a/app/views/missings/new.html.erb
+++ b/app/views/missings/new.html.erb
@@ -1,5 +1,48 @@
-<h1>New missing</h1>
+<div class="container_16">
+	
+<div class="grid_8">
+<div class="b-header">
+	Размещение объявления
+</div>
 
+<div class="b-header__description">
+	<p>
+		Создать объявление о пропаже очень просто: достаточно заполнить разделы объявления, продвигаясь от одного шага к другому. 
+	</p>
+	<p>
+		Постарайтесь разместить в вашем объявлении наиболее полную и точную информацию — она  необходима для качественного и оперативного поиска.
+	</p>
+</div>
+
+</div>
+<!-- End grid_8 -->
+<div class="clear"></div>
+<!-- End header -->
+
+<div class="grid_16">
+	
+<ul class="b-form__nav_list">
+	<li class="b-form__nav_element b-form__nav_first_element">Заполнение основной информации</li>
+	<li class="b-form__nav_element">Описание человека</li>
+	<li class="b-form__nav_element">Обстоятельства пропажи</li>
+	<li class="b-form__nav_element">Обратная связь</li>
+</ul>
+
+</div>
+</div>
+
+</div>
+<div class="clear"></div>
+<!-- End grid_16 and container -->
+<div class="b-form__nav_panel">
+</div>
+
+<div class="container_16">
+<div class="grid_8">
+		
 <%= render 'form' %>
 
-<%= link_to 'Back', missings_path %>
+</div>
+</div>
+<!-- End grid_8 and container  -->
+
