--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -1,13 +1,58 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
-  <%= @missing.name %>
+  <b>Man name:</b>
+  <%= @missing.man_name %>
 </p>
 
 <p>
   <b>Description:</b>
   <%= @missing.description %>
+</p>
+
+<p>
+  <b>Man gender:</b>
+  <%= @missing.man_gender %>
+</p>
+
+<p>
+  <b>Man birthday:</b>
+  <%= @missing.man_birthday %>
+</p>
+
+<p>
+  <b>Man char hash:</b>
+  <%= @missing.man_char_hash %>
+</p>
+
+<p>
+  <b>Author name:</b>
+  <%= @missing.author_name %>
+</p>
+
+<p>
+  <b>Author phone:</b>
+  <%= @missing.author_phone %>
+</p>
+
+<p>
+  <b>Author email:</b>
+  <%= @missing.author_email %>
+</p>
+
+<p>
+  <b>Author callback hash:</b>
+  <%= @missing.author_callback_hash %>
+</p>
+
+<p>
+  <b>Missing private hash:</b>
+  <%= @missing.missing_private_hash %>
+</p>
+
+<p>
+  <b>Missing password:</b>
+  <%= @missing.missing_password %>
 </p>
 
 
