--- a/app/views/missings/new.html.erb
+++ b/app/views/missings/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container_16">
 	
-<div class="grid_8">
+<div class="grid_10">
 <div class="b-header">
 	Размещение объявления
 </div>
@@ -15,14 +15,14 @@
 </div>
 
 </div>
-<!-- End grid_8 -->
+<!-- End grid_10 -->
 <div class="clear"></div>
 <!-- End header -->
 
 <div class="grid_16">
 	
 <ul class="b-form__nav_list">
-	<li class="b-form__nav_element b-form__nav_first_element">Заполнение основной информации</li>
+	<li class="b-form__nav_element b-form__nav_first_element b-form__nav_current_element">Заполнение основной информации</li>
 	<li class="b-form__nav_element">Описание человека</li>
 	<li class="b-form__nav_element">Обстоятельства пропажи</li>
 	<li class="b-form__nav_element">Обратная связь</li>
