--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>Bijou</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -36,8 +36,8 @@
   <!-- All JavaScript at the bottom, except for Modernizr and Respond.
        Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
        For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-  <%= javascript_include_tag "modernizr", "respond", :cache => "modernizer-respond" %>
-  
+    <%= javascript_include_tag "modernizr", :cache => "modernizer" %>
+
 
 </head>
 
