--- a/public/stylesheets/b-form.css
+++ b/public/stylesheets/b-form.css
@@ -1,4 +1,4 @@
-.b-form__nav_panel {
+.b-form__nav_panel, .b-form__action_panel {
 	position: relative;
 	width: 100%;
 	height: 32px;
@@ -7,6 +7,20 @@
 	
 	top: -32px;
 }
+
+.b-form__actions {
+	margin-top: 2em;
+	position:relative;
+	z-index: 2;
+}
+
+.b-form__action_panel {
+	top: -27px;
+}
+
+	.b-form__actions .ui-button {
+		margin-right: 57px;
+	}
 
 .b-form__nav_list {
 	list-style: url(../images/form_arrow.png) none;
