--- a/app/views/missings/_characteristic.html.erb
+++ b/app/views/missings/_characteristic.html.erb
@@ -1,12 +1,12 @@
 <!-- Second step --> 
   <div class="b-form__field">
-    <%= f.label :man_growth, "Рост", :class => "b-form__label" %><br />
+    <%= f.label :man_growth, "Рост", :class => "b-form__label" %>
     <%= f.text_field :man_growth, :class => "b-form__text_growth" %>
     <span class="b-form__text_description">см</span>
   </div>
   
   <div class="b-form__field">
-    <%= f.label :man_physique, "Телосложение", :class => "b-form__label" %><br />
+    <%= f.label :man_physique, "Телосложение", :class => "b-form__label" %>
     <ul class="b-form__radio_list">
       <li class="b-form__radio_element">
         <%= f.radio_button :man_physique, 1 %> <%= f.label :man_physique_1, "худощавое" %>
@@ -28,7 +28,7 @@
   </div>
   
     <div class="b-form__field">
-    <%= f.label :man_hair_color, "Волосы", :class => "b-form__label" %><br />
+    <%= f.label :man_hair_color, "Волосы", :class => "b-form__label" %>
     <ul class="b-form__radio_list">
       <li class="b-form__radio_element">
         <%= f.radio_button :man_hair_color, 1 %> <%= f.label :man_hair_color_1, "светлые" %>
