--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -1,8 +1,8 @@
   <div class="b-form__field">
-    <%= f.label :man_name, "Кто пропал", :class => "b-form__label"  %><br />
+    <%= f.label :man_name, "Кто пропал", :class => "b-form__label" %>
     <%= f.text_field :man_name, :class => "b-form__text_name", :placeholder => "фамилия имя и отчество" %>
   <ul class="b-form__gender_list">
-    <li class="b-form__gender_element">
+    <li class="b-form__gender_element"> 
       <%= f.radio_button :man_gender, true  %><%= f.label :man_gender_true, "мужчина", :class => "b-form__gender_label"  %>
     </li>
     <li class="b-form__gender_element">
@@ -10,7 +10,20 @@
     </li>
   </ul>
   </div>
+  
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr" />
+  
+<div class="container_16">
+<div class="grid_8">
+    
   <div class="b-form__field">
-    <%= f.label :man_birthday, "День рождения", :class => "b-form__label" %><br />
+    <%= f.label :man_birthday, "День рождения", :class => "b-form__label" %>
     <%= f.date_select :man_birthday %>
   </div>
+  
+<!-- Container and grid_8 div closed in new.html.erb -->
