--- a/public/stylesheets/b-form.css
+++ b/public/stylesheets/b-form.css
@@ -1,64 +1,68 @@
 .b-form__nav_panel, .b-form__action_panel {
-	position: relative;
-	width: 100%;
-	height: 32px;
-	background: #f4f4f4;
-	z-index: 1;
-	
-	top: -32px;
+  position: relative;
+  width: 100%;
+  height: 32px;
+  background: #f4f4f4;
+  z-index: 1;
+  
+  top: -32px;
+}
+
+.b-form__field {
+  
 }
 
 .b-form__actions {
-	margin-top: 2em;
-	position:relative;
-	z-index: 2;
+  margin-top: 2em;
+  position:relative;
+  z-index: 2;
 }
 
 .b-form__action_panel {
-	top: -27px;
+  top: -27px;
 }
 
-	.b-form__actions .ui-button {
-		margin-right: 57px;
-	}
+  .b-form__actions .ui-button {
+    margin-right: 57px;
+  }
 
 .b-form__nav_list {
-	list-style: url(../images/form_arrow.png) none;
-	
-	height: 32px;
-	position: relative;
-	z-index: 2;
+  list-style: url(../images/form_arrow.png) none;
+  
+  height: 32px;
+  position: relative;
+  z-index: 2;
 }
-	
-	.b-form__nav_element {
-		float: left;
-		margin-right: 2.5em;
-		padding-left: 1em;
-		padding-top: 8px;
-		
-	}
-	
-	.b-form__nav_first_element {
-		margin-left: -3.1em;
-		
-		list-style: none;
-	}
+  
+  .b-form__nav_element {
+    float: left;
+    margin-right: 2.5em;
+    padding-left: 1em;
+    padding-top: 8px;
+    
+  }
+  
+  .b-form__nav_first_element {
+    margin-left: -3.1em;
+    
+    list-style: none;
+  }
 
-	.b-form__nav_first_element.b-form__nav_current_element {
-		margin-left: -2.7em;
-	}
-	
-	.b-form__nav_current_element {
-		font-size: 16px;
-		font-weight: bold;
-		
-		padding-top: 6px;
-	}
-	
+  .b-form__nav_first_element.b-form__nav_current_element {
+    margin-left: -2.7em;
+  }
+  
+  .b-form__nav_current_element {
+    font-size: 18px;
+    
+    padding-top: 4px;
+  }
+  
 .b-form__label {
-	font-size:16px;
-	
-	line-height: 37px;
+  font-size:16px;
+  
+  display: block;
+  padding-bottom: 10px;
 }
 
 .b-form__radio_list {
@@ -76,18 +80,18 @@
 }
 
 .b-form__gender_list {
-	list-style: none;
-	
-	margin: 1em 0 0;
-	overflow: hidden;
+  list-style: none;
+  
+  margin: 1em 0 0;
+  overflow: hidden;
 }
 
-	.b-form__gender_element {
-		float: left;
-		margin: 0 2em 0 0;
-	}
-	
-		.b-form__gender_label {
-			padding-left: .4em;
-			vertical-align: .2em;
-		}
+  .b-form__gender_element {
+    float: left;
+    margin: 0 2em 0 0;
+  }
+  
+    .b-form__gender_label {
+      padding-left: .4em;
+      vertical-align: .2em;
+    }
