--- a/app/views/missings/_characteristic.html.erb
+++ b/app/views/missings/_characteristic.html.erb
@@ -1,49 +1,45 @@
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
 <!-- Second step --> 
+<div class="container_16">
+	
+<div class="grid_2">
   <div class="b-form__field">
     <%= f.label :man_growth, "Рост", :class => "b-form__label" %>
     <%= f.text_field :man_growth, :class => "b-form__text_growth" %>
     <span class="b-form__text_description">см</span>
   </div>
-  
+</div>
+
+<div class="grid_3">
   <div class="b-form__field">
     <%= f.label :man_physique, "Телосложение", :class => "b-form__label" %>
     <ul class="b-form__radio_list">
       <li class="b-form__radio_element">
-        <%= f.radio_button :man_physique, 1 %> <%= f.label :man_physique_1, "худощавое" %>
+        <%= f.radio_button :man_physique, 1 %> <%= f.label :man_physique_1, "худощавое", :class => "b-form__radio_label" %>
       </li>
       <li class="b-form__radio_element">
-        <%= f.radio_button :man_physique, 2 %> <%= f.label :man_physique_2, "обычное" %>
+        <%= f.radio_button :man_physique, 2 %> <%= f.label :man_physique_2, "обычное", :class => "b-form__radio_label" %>
       </li>
       <li class="b-form__radio_element">
-        <%= f.radio_button :man_physique, 3 %> <%= f.label :man_physique_3, "спортивное" %>
+        <%= f.radio_button :man_physique, 3 %> <%= f.label :man_physique_3, "спортивное", :class => "b-form__radio_label" %>
       </li>
       <li class="b-form__radio_element">
-        <%= f.radio_button :man_physique, 4 %> <%= f.label :man_physique_4, "полное" %>
+        <%= f.radio_button :man_physique, 4 %> <%= f.label :man_physique_4, "полное", :class => "b-form__radio_label" %>
       </li>
-      <li class="b-form__radio_element">
-        <%= f.label :man_physique, "другое" %> <br />
-        <%= f.text_field :man_physique %> 
+      <li class="b-form__radio_element b-form__subfield">
+        <%= f.radio_button :man_physique, 0 %> <%= f.label :man_physique_0, "другое", :class => "b-form__radio_label" %> <br />
+        <%= f.text_field :man_physique, :class => "b-form__text_another" %> 
       </li>
     </ul>
   </div>
-  
+</div>
+
+<div class="grid_3">
     <div class="b-form__field">
     <%= f.label :man_hair_color, "Волосы", :class => "b-form__label" %>
-    <ul class="b-form__radio_list">
-      <li class="b-form__radio_element">
-        <%= f.radio_button :man_hair_color, 1 %> <%= f.label :man_hair_color_1, "светлые" %>
-      </li>
-      <li class="b-form__radio_element">
-        <%= f.radio_button :man_hair_color, 2 %> <%= f.label :man_hair_color_2, "темные" %>
-      </li>
-      <li class="b-form__radio_element">
-        <%= f.radio_button :man_hair_color, 3 %> <%= f.label :man_hair_color_3, "рыжие" %>
-      </li>
-      <li class="b-form__radio_element">
-        <%= f.label :man_hair_color, "другое" %> <br />
-        <%= f.text_field :man_hair_color %> 
-      </li>
-    </ul>
     <ul class="b-form__radio_list">
       <li class="b-form__radio_element">
         <%= f.radio_button :man_hair_length, 1 %> <%= f.label :man_hair_length_1, "длинные" %>
@@ -58,5 +54,46 @@
         <%= f.radio_button :man_hair_length, 4 %> <%= f.label :man_hair_length_4, "нет волос" %>
       </li>
     </ul>
+
+	<ul class="b-form__radio_list b-form__subfield">
+      <li class="b-form__radio_element">
+        <%= f.radio_button :man_hair_color, 1 %> <%= f.label :man_hair_color_1, "светлые" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.radio_button :man_hair_color, 2 %> <%= f.label :man_hair_color_2, "темные" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.radio_button :man_hair_color, 3 %> <%= f.label :man_hair_color_3, "рыжие" %>
+      </li>
+      <li class="b-form__radio_element b-form__subfield">
+        <%= f.radio_button :man_hair_color, 0 %> <%= f.label :man_hair_color_0, "другие" %> <br />
+        <%= f.text_field :man_hair_color, :class => "b-form__text_another" %> 
+      </li>
+    </ul>
   </div>
-  
+</div>
+
+<div class="grid_3">
+  <div class="b-form__field">
+    <%= f.label :man_specials, "Особые приметы", :class => "b-form__label" %>
+    <ul class="b-form__radio_list">
+      <li class="b-form__radio_element">
+        <%= f.check_box :man_specials_tattoo %> <%= f.label :man_specials_tattoo, "татуировки" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.check_box :man_specials_piercing %> <%= f.label :man_specials_piercing, "пирсинг" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.check_box :man_specials_scar %> <%= f.label :man_specials_scar, "шрамы" %>
+      </li>
+      <li class="b-form__radio_element">
+		<%= f.label :man_specials, "еще приметы" %> <br />
+        <%= f.text_area :man_specials, :rows => 5 %> 
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="clear"></div>
+
+<div class="grid_8">
