--- a/app/views/missings/_form.html.erb
+++ b/app/views/missings/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@missing) do |f| %>
+<%= form_for @missing, :url => "/add_missing/save_step.json", :remote => true, :html => { 
+	:next_step => "/add_missing/" + @missing.next_step,
+	:previous_step => "/add_missing/" + @missing.previous_step } do |f| %>
   <% if @missing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@missing.errors.count, "error") %> prohibited this missing from being saved:</h2>
@@ -15,8 +17,9 @@
 
 
 	<div class="b-form__actions">
-		<%= f.submit "Предыдущий шаг", :name => "back_button" unless @missing.first_step? %>
-		<%= f.submit "Следующий шаг" %>
+		<%= f.submit "Предыдущий шаг", :class => "b-form__back_button" unless @missing.first_step? %>
+		<%= f.submit "Следующий шаг", :class => "b-form__next_button" unless @missing.last_step?  %>
+		<%= f.submit "Опубликовать объявление", :class => "b-form__save_button green" if @missing.last_step?  %>
 	</div>
 	
 </div>
