--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -1,22 +1,31 @@
 <div class="b-form__nested">
-  <div class="b-form__field">
-    <%= f.label :address, "Адрес", :class => "b-form__label" %>
-    <%= f.text_field :address %>
+  <div class="b-padding_1">	
+  	<div class="b-form__field">
+	    <%= f.label :address, "Адрес", :class => "b-form__label" %>
+	    <%= f.text_field :address %>
+	  </div>
+	  <div class="b-form__field">
+	    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
+	    <%= f.text_field :name %>
+	    <ul class="b-form__samples" for="places_name">
+	      <li>Например:</li>
+	      <li class="b-form__samples_element">дом</li>
+	      <li class="b-form__samples_element">работа</li>
+	      <li class="b-form__samples_element">место учебы</li>
+	      <li class="b-form__samples_element">клуб</li>
+	    </ul> 
+	  </div>
+	  <div class="b-form__field">
+	    <%= f.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
+	    <%= f.text_area :description, :rows => 10 %>
+	    <p class="b-form__field_description">Как называется и чем там занимался</p>
+	  </div>
+   	  
   </div>
-  <div class="b-form__field">
-    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
-    <%= f.text_field :name %>
-    <ul class="b-form__samples" for="places_name">
-      <li>Например:</li>
-      <li class="b-form__samples_element">дом</li>
-      <li class="b-form__samples_element">работа</li>
-      <li class="b-form__samples_element">место учебы</li>
-      <li class="b-form__samples_element">клуб</li>
-    </ul> 
+<div class="b-form__nested_action_panel">
   </div>
-  <div class="b-form__field">
-    <%= f.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
-    <%= f.text_area :description, :rows => 10 %>
-    <p class="b-form__field_description">Как называется и чем там занимался</p>
-  </div>
+	<div class="b-form__actions b-padding_1">
+		<%= tag :input, { :type => "button", :value => "Добавить" } %>
+	  </div>
+  
 </div>
