--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -2,30 +2,28 @@
   <div class="b-padding_1">	
   	<div class="b-form__field">
 	    <%= f.label :address, "Адрес", :class => "b-form__label" %>
-	    <%= f.text_field :address %>
+	    <%= f.text_field :address, :class => "b-form__nested_field" %>
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
-	    <%= f.text_field :name %>
-	    <ul class="b-form__samples" for="places_name">
-	      <li>Например:</li>
-	      <li class="b-form__samples_element">дом</li>
-	      <li class="b-form__samples_element">работа</li>
-	      <li class="b-form__samples_element">место учебы</li>
-	      <li class="b-form__samples_element">клуб</li>
-	    </ul> 
+	    <%= f.text_field :name, :class => "b-form__nested_field" %>
+	    <div class="b-form__field_description" for="missing_places_attributes_0_name">
+	      <span>Например: </span>
+	 	  <span class="b-form__samples_element b-pseudo_link">дом</span>,
+	      <span class="b-form__samples_element b-pseudo_link">работа</span>,
+	      <span class="b-form__samples_element b-pseudo_link">место учебы</span>,
+	      <span class="b-form__samples_element b-pseudo_link">клуб</span>,
+	    </div> 
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
-	    <%= f.text_area :description, :rows => 10 %>
+	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field" %>
 	    <p class="b-form__field_description">Как называется и чем там занимался</p>
 	  </div>
    	  
   </div>
-<div class="b-form__nested_action_panel">
+  <div class="b-form__nested_action_panel b-padding_1">
+	<%= tag :input, { :type => "button", :value => "Добавить" } %>
   </div>
-	<div class="b-form__actions b-padding_1">
-		<%= tag :input, { :type => "button", :value => "Добавить" } %>
-	  </div>
   
 </div>
