--- a/public/stylesheets/b-form.css
+++ b/public/stylesheets/b-form.css
@@ -166,9 +166,9 @@ input[type="text"] {
 
 /* Примеры заполнения формы */
 .b-form__nested {
-	-webkit-box-shadow: 0px 2px 6px 0px #b4b4b4;
-	-moz-box-shadow: 0px 2px 6px 0px #b4b4b4;
-	box-shadow: 0px 2px 6px 0px #b4b4b4;
+	-webkit-box-shadow: 0px 1px 6px 0px #b4b4b4;
+	-moz-box-shadow: 0px 1px 6px 0px #b4b4b4;
+	box-shadow: 0px 1px 6px 0px #b4b4b4;
 }
 	
 	.b-form__nested_field {
@@ -231,6 +231,8 @@ input[type="text"] {
 	line-height: 1;
 	padding: 0.2em 0 0.3em 17px;
 	cursor: pointer;
+	
+	color: #666;
 }
 
 
@@ -256,6 +258,8 @@ input[type="text"] {
 .b-form-checkbox label.checked, 
 .b-form-radio label.checked {
 	background-position: -17px -219px;
+	
+	color: #000;
 }
 
 .b-form-checkbox label.checkedHover, 
