Update missing places

--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "missing/add_places", :cache => true %>
 <div class="b-form__nested">
   <div class="b-padding_1">	
   	<div class="b-form__field">
@@ -12,7 +13,7 @@
 	 	  <span class="b-form__samples_element b-pseudo_link">дом</span>,
 	      <span class="b-form__samples_element b-pseudo_link">работа</span>,
 	      <span class="b-form__samples_element b-pseudo_link">место учебы</span>,
-	      <span class="b-form__samples_element b-pseudo_link">клуб</span>,
+	      <span class="b-form__samples_element b-pseudo_link">клуб</span>
 	    </div> 
 	  </div>
 	  <div class="b-form__field">
