--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -1,4 +1,8 @@
-<%= javascript_include_tag "missing/add_places", :cache => true %>
+<% if f.object.address 	!= "" %>
+<b>Address: <%= f.object.address %></b><br>
+<% end %>
+
+<% unless f.object.address %>
 <div class="b-form__nested">
   <div class="b-padding_1">	
   	<div class="b-form__field">
@@ -26,5 +30,5 @@
   <div class="b-form__nested_action_panel b-padding_1">
 	<%= tag :input, { :type => "button", :value => "Добавить" } %>
   </div>
-  
 </div>
+<% end %>
