--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -1,13 +1,9 @@
-<% if f.object.address 	!= "" %>
-<b>Address: <%= f.object.address %></b><br>
-<% end %>
-
 <% unless f.object.address %>
-<div class="b-form__nested">
+<div class="b-form__nested b-form__add_place">
   <div class="b-padding_1">	
   	<div class="b-form__field">
 	    <%= f.label :address, "Адрес", :class => "b-form__label" %>
-	    <%= f.text_field :address, :class => "b-form__nested_field" %>
+	    <%= f.text_field :address, :class => "b-form__nested_field b-form__add_place_address" %>
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
@@ -30,5 +26,11 @@
   <div class="b-form__nested_action_panel b-padding_1">
 	<%= tag :input, { :type => "button", :value => "Добавить" } %>
   </div>
+</div>
+<% end %>
+<% if f.object.address %>
+<div class="b-form__field b-form__place">
+	<div class="b-form__label"><%= f.object.name %></div>
+	<p><%= f.object.address %></p>
 </div>
 <% end %>
