Update missing process

--- a/app/views/missings/_characteristic.html.erb
+++ b/app/views/missings/_characteristic.html.erb
@@ -31,7 +31,7 @@
       </li>
       <li class="b-form__radio_element b-form__subfield">
         <%= f.radio_button :man_physique, 0 %> <%= f.label :man_physique_0, "другое", :class => "b-form__radio_label" %> <br />
-        <%= f.text_field :man_physique, :class => "b-form__text_another" %> 
+        <%= f.text_field :man_physique_another, :class => "b-form__text_another" %> 
       </li>
     </ul>
   </div>
@@ -67,7 +67,7 @@
       </li>
       <li class="b-form__radio_element b-form__subfield">
         <%= f.radio_button :man_hair_color, 0 %> <%= f.label :man_hair_color_0, "другие" %> <br />
-        <%= f.text_field :man_hair_color, :class => "b-form__text_another" %> 
+        <%= f.text_field :man_hair_color_another, :class => "b-form__text_another" %> 
       </li>
     </ul>
   </div>
