--- a/app/views/missings/_familiar_fields.html.erb
+++ b/app/views/missings/_familiar_fields.html.erb
@@ -1,30 +1,28 @@
-<% if f.object.name %>
-<b>Name: <%= f.object.name %></b><br>
-<% else %>
-<div class="b-form__nested">
+<% unless f.object.name %>
+<div class="b-form__nested b-form__add_familiar">
   <div class="b-padding_1">	
   	<div class="b-form__field">
 	    <%= f.label :name, "Как зовут знакомого", :class => "b-form__label" %>
-	    <%= f.text_field :name, :class => "b-form__nested_field", :placeholder => "Фамилия имя отчество" %>
+	    <%= f.text_field :name, :class => "b-form__nested_field b-form__add_familiar_name", :placeholder => "Фамилия имя отчество" %>
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :relations, "В каких отношениях состоят", :class => "b-form__label" %>
 	    <ul class="b-form__radio_list">
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations, 1 %> <%= f.label :relations_1, "отец" %>
+	        <%= f.radio_button :relations, 1, :class => "b-form__add_familiar_relations" %> <%= f.label :relations_1, "отец" %>
 	      </li>
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations, 2 %> <%= f.label :relations_2, "мать" %>
+	        <%= f.radio_button :relations, 2, :class => "b-form__add_familiar_relations" %> <%= f.label :relations_2, "мать" %>
 	      </li>
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations, 3 %> <%= f.label :relations_3, "брат" %>
+	        <%= f.radio_button :relations, 3, :class => "b-form__add_familiar_relations" %> <%= f.label :relations_3, "брат" %>
 	      </li>
 		  <li class="b-form__radio_element">
-	        <%= f.radio_button :relations, 4 %> <%= f.label :relations_4, "сестра" %>
+	        <%= f.radio_button :relations, 4, :class => "b-form__add_familiar_relations" %> <%= f.label :relations_4, "сестра" %>
 	      </li>
 	      <li class="b-form__radio_element b-form__subfield">
-	        <%= f.radio_button :relations, 0 %> <%= f.label :relations_0, "другие" %> <br />
-	        <%= f.text_field :relations, :class => "b-form__text_another" %> 
+	        <%= f.radio_button :relations, 0, :class => "b-form__add_familiar_relations" %> <%= f.label :relations_0, "другие" %> <br />
+	        <%= f.text_field :relations, :class => "b-form__text_another b-form__add_familiar_relations_another" %> 
 	      </li>
 	    </ul>
 	  </div>
@@ -33,28 +31,58 @@
 		<p class="b-form__field_description">Отметьте «хорошо», если это здоровые, нормальные или ничем не примечательные отношения. Если это были плохие или что-то странное происходило в последнее время, отметьте «напряженные».</p>
 	    <ul class="b-form__radio_list b-form__subfield">
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations_quality, 1 %> <%= f.label :relations_quality_1, "хорошие" %>
+	        <%= f.radio_button :relations_quality, 1, :class => "b-form__add_familiar_relations_quality" %> <%= f.label :relations_quality_1, "хорошие" %>
 	      </li>
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations_quality, 2 %> <%= f.label :relations_quality_2, "напряженные" %>
+	        <%= f.radio_button :relations_quality, 2, :class => "b-form__add_familiar_relations_quality b-form__familiar_relations_tense" %> <%= f.label :relations_quality_2, "напряженные" %>
 	      </li>
 	      <li class="b-form__radio_element">
-	        <%= f.radio_button :relations_quality, 0 %> <%= f.label :relations_quality_0, "не знаю" %>
+	        <%= f.radio_button :relations_quality, 0, :class => "b-form__add_familiar_relations_quality" %> <%= f.label :relations_quality_0, "не знаю" %>
 	      </li>
 	    </ul> 
+	    <div class="b-form__add_familiar_relations_tense_description_field">
+		    <%= f.label :relation_tense_description, "С чем связаны напряженные отношения" %><br>
+		    <%= f.text_area :relation_tense_description, :rows => 4, :class => "b-form__nested_field b-form__add_familiar_relations_tense_description" %>  
+	    </div>
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :description, "Опишите, что это за человек и как они общались", :class => "b-form__label" %>
-	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field" %>   
+	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field b-form__add_familiar_description" %>   
 	  </div>
 	  <div class="b-form__field b-from__field_red">
-		<%= f.check_box :seen_last_day %> <%= f.label :seen_last_day, "с этим человеком [name] общался в последний день" %>
+		<%= f.check_box :seen_last_day, :class => "b-form__add_familiar_seen_last_day" %> <%= f.label :seen_last_day, "с этим человеком [name] общался в последний день" %>
 	  </div>
    	  
   </div>
   <div class="b-form__nested_action_panel b-padding_1">
-	<%= tag :input, { :type => "button", :value => "Добавить" } %>
+	<%= tag :input, { :type => "button", :value => "Добавить", :class => "b-form__add_familiar_button",  } %>
+	<%= link_to "Не добавлять", "#", :class => "b-form__add_familiar_button_cancel" %>
   </div>
   
+</div>
+<% else %>
+<div class="b-form__field b-form__familiar">
+	<div class="b-form__label">
+		<%= f.object.name %>
+		<div class="b-form__field_edit_action t-normal">
+			<%= tag :input, { :type => "button", :value => "редактировать", :class => "b-form__place_edit silver_action" } %>
+			<%= tag :input, { :type => "button", :value => "удалить", :class => "b-form__place_delete red_action" } %>
+		</div>
+	</div>
+	<p><%= f.object.relations %></p>
+	<% if f.object.relations_quality == 2 %>
+	<p>
+		Напряженные отношения:<br>
+		<%= f.object.relation_tense_description %>
+	</p>
+	<% end %>
+	<p><%= f.object.description %></p>
+	<%= f.hidden_field :name %>
+	<%= f.hidden_field :relations %>
+	<%= f.hidden_field :relations_quality %>
+	<%= f.hidden_field :relation_tense_description %>
+	<%= f.hidden_field :seen_last_day %>
+	<%= f.hidden_field :description %>
+	<%= f.hidden_field :_destroy %>
 </div>
 <% end %>
