--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -7,7 +7,7 @@
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
-	    <%= f.text_field :name, :class => "b-form__nested_field" %>
+	    <%= f.text_field :name, :class => "b-form__nested_field b-form__add_place_name" %>
 	    <div class="b-form__field_description" for="missing_places_attributes_0_name">
 	      <span>Например: </span>
 	 	  <span class="b-form__samples_element b-pseudo_link">дом</span>,
@@ -18,19 +18,30 @@
 	  </div>
 	  <div class="b-form__field">
 	    <%= f.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
-	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field" %>
+	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field b-form__add_place_description" %>
 	    <p class="b-form__field_description">Как называется и чем там занимался</p>
 	  </div>
    	  
   </div>
   <div class="b-form__nested_action_panel b-padding_1">
-	<%= tag :input, { :type => "button", :value => "Добавить" } %>
+	<%= tag :input, { :type => "button", :value => "Добавить", :class => "b-form__add_place_button" } %>
+	<%= link_to "Не добавлять", "#", :class => "b-form__add_place_button_cancel" %>
   </div>
 </div>
-<% end %>
-<% if f.object.address %>
+<% else %>
 <div class="b-form__field b-form__place">
-	<div class="b-form__label"><%= f.object.name %></div>
-	<p><%= f.object.address %></p>
+	<div class="b-form__label">
+		<%= f.object.name %>
+		<div class="b-form__field_edit_action t-normal">
+			<%= tag :input, { :type => "button", :value => "редактировать", :class => "b-form__place_edit silver_action" } %>
+			<%= tag :input, { :type => "button", :value => "удалить", :class => "b-form__place_delete red_action" } %>
+		</div>
+	</div>
+	<p><%= f.object.description %></p>
+	<p class="t-small"><%= f.object.address %></p>
+	<%= f.hidden_field :name %>
+	<%= f.hidden_field :address %>
+	<%= f.hidden_field :description %>
+	<%= f.hidden_field :_destroy %>
 </div>
 <% end %>
