--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,6 +3,23 @@
 a { color: #0065cc; }
 a:hover { color: red;}
 
+.t-big {
+	font-size: 18px;
+}
+
+.t-medium {
+	font-size: 16px;
+}
+
+.t-normal {
+	font-size: 13px;
+}
+
+.t-small {
+	font-family: Verdana;
+	font-size: 11px;
+}
+
 .b-padding_1 { 
 	padding: 1em;
 }
