--- a/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
+++ b/public/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css
@@ -283,6 +283,68 @@
 	box-shadow: inset 0 1px 0 0  #8bd263, inset 0 -1px 0 0 #6cc63d;
 }
 
+/* =============== */
+/* = Red action state = */
+/* =============== */
+.ui-state-default.red_action, .ui-widget-content.red_action .ui-state-default, .ui-widget-header.red_action .ui-state-default,
+.ui-state-default.red_action a, .ui-state-default.red_action a:link, .ui-state-default.red_action a:visited,
+.ui-state-hover.red_action, .ui-widget-content.red_action .ui-state-hover, .ui-widget-header.red_action .ui-state-hover, .ui-state-focus.red_action, .ui-widget-content.red_action .ui-state-focus, .ui-widget-header.red_action .ui-state-focus,
+.ui-state-active.red_action, .ui-widget-content.red_action .ui-state-active, .ui-widget-header.red_action .ui-state-active
+
+{	
+	color: #D52B2B;
+	
+	border: 0;
+	
+	background: #F8DBDB; /* Old browsers */
+	background: -moz-linear-gradient(top, #f5cdcd 0%, #fae4e4 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fae4e4), color-stop(100%,#f5cdcd)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #fae4e4 0%,#f5cdcd 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #fae4e4 0%,#f5cdcd 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #fae4e4 0%,#f5cdcd 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fae4e4', endColorstr='#f5cdcd',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #fae4e4	 0%,#f5cdcd 100%); /* W3C */
+	
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+input.ui-button.red_action {
+	padding: 0 .7em .3em .7em;
+}
+
+/* =============== */
+/* = Silver action state = */
+/* =============== */
+.ui-state-default.silver_action, .ui-widget-content.silver_action .ui-state-default, .ui-widget-header.silver_action .ui-state-default,
+.ui-state-default.silver_action a, .ui-state-default.silver_action a:link, .ui-state-default.silver_action a:visited,
+.ui-state-hover.silver_action, .ui-widget-content.silver_action .ui-state-hover, .ui-widget-header.silver_action .ui-state-hover, .ui-state-focus.silver_action, .ui-widget-content.silver_action .ui-state-focus, .ui-widget-header.silver_action .ui-state-focus,
+.ui-state-active.silver_action, .ui-widget-content.silver_action .ui-state-active, .ui-widget-header.silver_action .ui-state-active
+
+{	
+	color: #2e2e2e;
+	
+	border: 0;
+	
+	background: #e4e4e4; /* Old browsers */
+	background: -moz-linear-gradient(top, #f3f3f3 0%, #d8d8d8 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f3f3f3), color-stop(100%,#d8d8d8)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #f3f3f3 0%,#d8d8d8 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #f3f3f3 0%,#d8d8d8 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #f3f3f3 0%,#d8d8d8 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#d8d8d8',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #f3f3f3	 0%,#d8d8d8 100%); /* W3C */
+	
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+input.ui-button.silver_action {
+	padding: 0 .7em .3em .7em;
+}
+
 /* Interaction Cues
 ----------------------------------*/
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #fed22f; background: #ffe45c url(images/ui-bg_highlight-soft_75_ffe45c_1x100.png) 50% top repeat-x; color: #363636; }
